--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'war'
+
 }
 
 group = 'com.example'
@@ -13,11 +14,14 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin
+    implementation group: 'org.apache.maven.plugins', name: 'maven-surefire-plugin', version: '3.2.5'
     providedCompile 'jakarta.platform:jakarta.jakartaee-api:9.1.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.keycloak:keycloak-core:23.0.4'
+    testImplementation group: 'com.intuit.karate', name: 'karate-apache', version: '0.9.6'
     implementation 'org.keycloak:keycloak-adapter-core:23.0.4'
     implementation 'commons-codec:commons-codec:1.16.0'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.0-M2'
@@ -47,4 +51,7 @@ tasks.withType(JavaCompile) {
 
 compileJava {
     options.compilerArgs << "-source" << "11" << "-target" << "11"
+}
+build {
+
 }
