--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "chai": "^5.1.1",
+    "chromedriver": "^125.0.3",
+    "geckodriver": "^4.4.1",
     "selenium-webdriver": "^4.21.0"
   }
 }
