--- a/build.gradle
+++ b/build.gradle
@@ -69,5 +69,44 @@ tasks.register('doMusic', Exec) {
     commandLine 'cmdmp3.exe', 'music.mp3'
 }
 
+import java.util.Properties
+
+def envProperties = new Properties()
+file('env.properties').withInputStream { inputStream ->
+    envProperties.load(inputStream)
+}
+
+def javaVersion = envProperties.getProperty('java.version', '20')
+def vmArgs
+vmArgs = envProperties.getProperty('vm.args', '-Xmx2g')
+
+tasks.register('env') {
+
+    doFirst {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(javaVersion)
+        }
+    }
+
+    exec {
+
+        commandLine('copy', 'C:\\Users\\Honor\\OneDrive\\Рабочий стол\\опи\\opi_lab3\\build\\libs\\opi_lab3-1.0-SNAPSHOT.war', 'C:\\Users\\Honor\\Downloads\\wildfly-30.0.0.Final\\wildfly-30.0.0.Final\\standalone\\deployments')
+
+        commandLine('cmd', '/c', 'C:\\Users\\Honor\\Downloads\\wildfly-30.0.0.Final\\wildfly-30.0.0.Final\\bin\\standalone.bat')
+
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
